--- a/examples/chat-app.html
+++ b/examples/chat-app.html
@@ -311,18 +311,13 @@
       messages,
       renderMessage,
       {
-        initialPosition: 'bottom',
+        align: 'bottom',
         onScroll: (info) => {
           // 可以在这里添加滚动事件处理
         }
       }
     );
     console.timeEnd('初始化聊天滚动');
-
-    // 自动滚动到底部（最新消息）
-    // setTimeout(() => {
-    //   fsv.scrollToBottom();
-    // }, 100);
 
     // 控制函数
     function scrollToTop() {
