--- a/examples/index.html
+++ b/examples/index.html
@@ -289,21 +289,6 @@
         </div>
       </div>
 
-      <div class="example-card" onclick="location.href='test-debug.html'">
-        <div class="example-icon">🔍</div>
-        <div class="example-content">
-          <div class="example-title">调试工具</div>
-          <div class="example-description">
-            提供详细的滚动日志和状态监控，用于调试和分析滚动行为。
-          </div>
-          <div class="example-stats">
-            <div class="stat">30 条数据</div>
-            <div class="stat">调试日志</div>
-          </div>
-          <a href="test-debug.html" class="view-button">查看示例 →</a>
-        </div>
-      </div>
-
       <div class="example-card" onclick="location.href='chat-app.html'">
         <div class="example-icon">💬</div>
         <div class="example-content">
@@ -349,18 +334,18 @@
         </div>
       </div>
 
-      <div class="example-card" onclick="location.href='scroll-performance-test.html'">
-        <div class="example-icon">⚡</div>
+      <div class="example-card" onclick="location.href='test-remove.html'">
+        <div class="example-icon">🗑️</div>
         <div class="example-content">
-          <div class="example-title">scrollToItem 性能测试</div>
+          <div class="example-title">Remove 功能测试</div>
           <div class="example-description">
-            演示优化后的 scrollToItem：已渲染的 item 不会重新渲染，性能显著提升。
+            测试智能删除功能：可视范围内优先向下补充，范围外零成本删除。
           </div>
           <div class="example-stats">
-            <div class="stat">性能优化</div>
-            <div class="stat">实时对比</div>
+            <div class="stat">智能删除</div>
+            <div class="stat">动态补充</div>
           </div>
-          <a href="scroll-performance-test.html" class="view-button">查看示例 →</a>
+          <a href="test-remove.html" class="view-button">查看示例 →</a>
         </div>
       </div>
     </div>
